--- a/module2-solution/css/stylesheets.css
+++ b/module2-solution/css/stylesheets.css
@@ -32,7 +32,7 @@ p {
 
 section {
 	border:	1px solid black;
-	background-color: #00FF99;
+	background-color: #e542f4;
 	width: 100%;
 	height: 200px;
 	font-family: Helvetica;
